--- a/Nosotros/nosotros.css
+++ b/Nosotros/nosotros.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Playfair Display', serif;
 }
 :root{
     --negro: black;
@@ -9,28 +14,47 @@
     --grisClaro: rgba(255, 255, 255, 0.2)
 }
 
-header{
-    background-image: url(./IMG/fondo.webp);
-    height: 600px;
+p{
+    font-family: 'Smooch Sans', sans-serif;
+    font-size: 20px;
+}
+
+header video{
     width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    height: auto;
     margin-top: -25px;
+   
+}
+.video{
+    position: relative;
+}
+
+.nosotros{
+    position: absolute;
+    top: 85px;
+    color: white;
+    left: 50px;
+    font-size: 50px;
 }
 nav{
     padding: 20px;
     margin-bottom: 20px;
     background: linear-gradient(to top, var(--negro) 80%, var(--gris));
     font-size: 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
 }
 .tituloP{
     color: var(--blanco);
-    margin-left: 200px;
-    margin-top: 10px;
+    margin-left: 600px;
+    margin-top: 3px;
     margin-bottom: 20px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    font-size: 40px;
+    font-family: 'Ephesis', cursive;
 }
 nav ul{
     width: 100%;
@@ -41,7 +65,7 @@ nav ul{
 }
 nav li{
     height: 50px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 nav a{
     height: 100%;
@@ -79,18 +103,22 @@ nav li:first-child{
     width: 100%;
 }
 .tituloV{
-    font-size: 30px;
+    font-size: 40px;
     color: var(--blanco);
     text-align: start;
-    margin-top: 15px;
+    margin-top: 10px;
     margin-left: 10px;
-    margin-bottom: 40px;
+    font-family: 'Ephesis', cursive;
+}
+.enlaces{
+    margin-top: 30px;
 }
 .menu{
     display: flex;
     justify-content: center;
     align-items: flex-end;
     margin-left: -70px;
+    margin-right: 30px;
     padding-top: -20px;
     background-color: white;
 }
@@ -98,3 +126,28 @@ nav li:first-child{
     background-color: gray;
   
 }
+main{
+    background-color: black;
+    color: white;
+    padding: 60px;
+    margin-top: -10px;
+}
+.tituloServicio{
+    margin-top: 30px;
+    font-size: 25px;
+    text-align: center;
+}
+.sesion0{
+    margin-top: 30px;
+    text-align: center;
+}
+.sesion1{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 20px;
+}
+.sesion1_parrafo{
+    margin-top: 100px;
+}
+
