--- a/Nosotros/nosotros.css
+++ b/Nosotros/nosotros.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 
 *{
@@ -231,6 +229,7 @@ main{
     margin-top: -30px;
     transform: translate(-50px, -200px);
 
+
 }
 .flechaD{
     color: white;
@@ -366,3 +365,67 @@ main{
     width: 85%;
 
 }
+
+/*Footer*/
+footer{
+    background-color: rgb(31, 30, 30);
+    padding: 40px;
+}
+.footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    margin-top: 30px;
+}
+/*Imagen*/
+.footer_imagen img{
+    width: 200px;
+    height: 200px;
+    border-radius: 30px;
+}
+.footer_imagen{
+  margin-left: 115px;
+}
+/*Redes*/
+.redes h2{
+    text-align: center;
+    color: white;
+}
+.redes{
+    margin-left: 40px;
+}
+.redes img{
+    width: 40px;
+    margin-top: 40px;
+}
+.facebook{
+    margin-left: 40px;
+}
+.ig{
+    margin-left: 40px;
+}
+.youtube{
+    margin-left: 40px;
+}
+.tik{
+    margin-left: 40px;
+}
+/*Informacion*/
+.footer_informacion{
+    margin-right: 50px;
+}
+.footer_informacion h2{
+    text-align: center;
+    color: white;
+}
+.info1, .info2, .info3{
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+.info1 img, .info2 img, .info3 img{
+    width: 25px;
+    margin-right: 10px;
+}
+
+
