--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body h1{
     padding-bottom: 500px; 
     color: aqua;  
@@ -68,3 +69,83 @@ body {
     transform: translate(-50%, -50%);
     z-index: -1;
   }
+
+  .Cuerpo h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-style: italic;
+    color: rgb(252, 247, 247);
+    padding-bottom: 500px;
+  
+  }
+
+  .menubtn {
+    background-color: #007bff00; /* Color del botón (puedes cambiarlo) */
+    color: #fff;
+    border: none;
+    padding: 15px 25px;
+    font-size: 40px;
+    cursor: pointer;
+    position: absolute;
+    top: 2%;
+    left: 95%;
+  }
+
+.Cuerpo h2{
+  position: absolute;
+  top: 5%;
+  text-align: center;
+  left: 41.5%;
+}
+
+.Cuerpo h3{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: larger;
+  color: white;
+  position: absolute;
+  top: 8%;
+  font-style: italic;
+  text-align: center;
+  left: 45%;
+}
+
+.menu {
+  display: none;
+  position: absolute;
+  top: 110px; /* Ajusta la posición vertical del menú desplegable según tu diseño */
+  right: 10px; /* Ajusta la posición horizontal del menú desplegable según tu diseño */
+  background-color: rgba(17, 78, 170, 0.534);
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+.menu ul {
+  list-style: disc;
+  padding: 0;
+}
+
+.menu ul li {
+  margin-bottom: 5px;
+}
+
+.menu ul li a {
+  text-decoration: dashed;
+  color: #ecdcdc;
+}
+
+.menu.show-menu {
+  display: block;
+}
+
+.img-container {
+  overflow-x: auto;
+  white-space: nowrap;
+  padding: 20px 0; /* Ajuste del espacio entre el separador y las imágenes */
+}
+
+.img-container img {
+  max-width: 30%; /* Ajuste para que las imágenes se ajusten al ancho disponible */
+  height: 250px;
+  margin-right: 10px; /* Ajuste del espacio entre las imágenes */
+  padding-left: 40px;
+  margin-bottom: 70px;
+}
