--- a/Accesorios/accesorios.css
+++ b/Accesorios/accesorios.css
@@ -248,3 +248,71 @@ main{
 .hide{
     display: none;
 }
+/*Apartado 2*/
+.apartado2{
+    margin-top: 50px;
+}
+
+.slide{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 20px;
+    column-gap: 60px;
+}
+.apartado2_todo_imagen{
+    grid-column: 1/2;
+    grid-row: 1/3;
+    width: 100%;
+    height: 350px;
+}
+.apartado2_todo_parrafo {
+    grid-column: 2/3;
+    grid-row: 2/2;
+    margin-top: -40px;
+   
+}
+.apartado2_todo_titulo{
+    grid-column: 2/3;
+    grid-row: 1/1;
+    margin-top: 100px;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.flechaI{
+    color: white;
+    background-color: transparent;
+    font-size: 30px;
+    border: 0;
+    border-radius: 50px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: -30px;
+    transform: translate(-50px, -200px);
+
+
+}
+.flechaD{
+    color: white;
+    background-color: transparent;
+    font-size: 30px;
+    border: 0;
+    border-radius: 50px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: -30px;
+    transform: translate(1195px, -200px)
+    
+
+}
+.flechaD:hover , .flechaI:hover{
+    background-color: var(--azul);
+    color: black;
+}
+.apartado2_info{
+    text-align: center;
+    font-size: 25px;
+    margin: 20px auto 40px;
+}
