--- a/styles/stylecars.css
+++ b/styles/stylecars.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 .menubtn {
     background-color: #007bff00; 
@@ -55,3 +55,29 @@ body{
     display: block;
   }
   
+  h1{
+    color: white;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bolder;
+  }
+
+  h2{
+    color: white;
+    text-align: center;
+    text-shadow: blue;
+  }
+
+  .cont{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .cont video, img{
+    max-width: 700px;
+    max-height: 100%;
+    display: block;
+    margin: auto;
+  }
