--- a/styles/stylecars.css
+++ b/styles/stylecars.css
@@ -1,5 +1,8 @@
 body{
     background-color: rgb(0, 0, 0);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: larger;
+    font-weight: bolder;
 }
 .menubtn {
     background-color: #007bff00; 
