--- a/Accesorios/accesorios.css
+++ b/Accesorios/accesorios.css
@@ -58,16 +58,7 @@ nav{
     width: 100%;
     z-index: 100;
 }
-.tituloP{
-    color: var(--blanco);
-    margin-left: 600px;
-    margin-top: 3px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    font-size: 40px;
-    font-family: 'Ephesis', cursive;
-}
+
 nav ul{
     width: 100%;
     list-style: none;
@@ -114,7 +105,7 @@ nav li:first-child{
 }
 .sidebar li{
     width: 100%;
-}
+} 
 .tituloV{
     font-size: 40px;
     color: var(--blanco);
@@ -135,9 +126,19 @@ nav li:first-child{
     padding-top: -20px;
     background-color: white;
 }
+
 .menu :hover, .cerrar :hover{
     background-color: gray;
   
+}
+
+.tituloP{
+    color: var(--blanco);
+    margin-right: 590px;
+    margin-top: 3px;
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-family: 'Ephesis', cursive;
 }
 
 /*Main*/
@@ -248,6 +249,99 @@ main{
 .hide{
     display: none;
 }
+/*Carrito*/
+.productos_carrito li{
+    width: 100%;
+}
+.productos_carrito{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 400px;
+    z-index: 999;
+    background-color: var(--grisClaro);
+    backdrop-filter: blur(5px);
+    box-shadow: -10px 0 10px var(--negro);
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.agregarAlCarrito{
+    background-color: black;
+    color: white;
+    margin-top: 10px;
+    margin-left: 35px;
+    text-align: center;
+    cursor: pointer;
+    padding: 5px 10px;
+    border: 3px var(--azul) solid;
+    border-radius: 20px;
+    font-size: 14px;
+}
+.agregarAlCarrito:hover{
+    background-color: var(--azul);
+    color: white;
+    font-weight: bold;
+    padding: 7px 13px;
+    margin-left: 31px;
+}
+.carrito{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-left: -5px;
+    padding-top: -20px;
+    
+    background-color: white;
+}
+.carrito :hover, .cerrar_carrito :hover{
+    background-color: gray;
+  
+}
+.cerrar_carrito a{
+    padding: 0;
+    margin-right: 20px;
+    margin-top: 10px;
+}
+
+.carrito-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+}
+
+.carrito-imagen {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+.carrito-nombre {
+    flex-grow: 1;
+    margin-right: 10px;
+}
+
+.carrito-precio {
+    margin-right: 10px;
+}
+
+.eliminar-btn {
+    background-color: #ff6347;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.carrito-total {
+    text-align: right;
+    padding: 10px;
+    font-weight: bold;
+}
 /*Apartado 2*/
 .apartado2{
     margin-top: 50px;
@@ -316,3 +410,66 @@ main{
     font-size: 25px;
     margin: 20px auto 40px;
 }
+/*Footer*/
+footer{
+    background-color: var(--grisOscuro);
+    padding: 40px;
+}
+.footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    margin-top: 30px;
+}
+/*Imagen*/
+.footer_imagen img{
+    width: 200px;
+    height: 200px;
+    border-radius: 30px;
+}
+.footer_imagen{
+  margin-left: 115px;
+}
+/*Redes*/
+.redes h2{
+    text-align: center;
+    color: white;
+}
+.redes{
+    margin-left: 40px;
+}
+.redes img{
+    width: 40px;
+    margin-top: 40px;
+}
+.facebook{
+    margin-left: 40px;
+}
+.ig{
+    margin-left: 40px;
+}
+.youtube{
+    margin-left: 40px;
+}
+.tik{
+    margin-left: 40px;
+}
+/*Informacion*/
+.footer_informacion{
+    margin-right: 50px;
+}
+.footer_informacion h2{
+    text-align: center;
+    color: white;
+}
+.info1, .info2, .info3{
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+.info1 img, .info2 img, .info3 img{
+    width: 25px;
+    margin-right: 10px;
+}
+
+
