--- a/styles/stylecars.css
+++ b/styles/stylecars.css
@@ -1,6 +1,6 @@
 body{
     background-color: rgb(0, 0, 0);
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: larger;
     font-weight: bolder;
 }
